--- a/templates/pdf_template.html
+++ b/templates/pdf_template.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Contagem de Temas Selecionados</title>
+    <title>Relatório de Temas já realizados</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -70,7 +70,7 @@
     </style>
 </head>
 <body>
-    <h1>Contagem de Temas Selecionados</h1>
+    <h1>Relatório de Temas já realizados</h1>
     <div class="contagem">
         <ul>
             {% for key, value in contagem_temas.items() %}
